<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="wrap_content">
    <item
        android:id="@+id/item1"
        android:showAsAction="always"
        android:title="@string/item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </item>
    <item
        android:id="@+id/item2"
        android:icon="@android:drawable/ic_menu_call"
        android:showAsAction="ifRoom"
        android:title="@string/item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </item>
    <item
        android:id="@+id/item3"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom|withText"
        android:title="@string/item3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </item>
    <item
        android:id="@+id/item4"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="never"
        android:title="@string/item4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </item>
</menu>
