<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/add_shop_d3_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shop_name_txt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/shop_name_etxt" />

    <TextView
        android:text="@string/add_shop_d3_pUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shop_photo_txt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/shop_photo_etxt" />
    <TextView
        android:text="@string/add_shop_d3_dec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shop_description_txt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/shop_description_etxt" />
    <TextView
        android:text="@string/add_shop_d3_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shop_price_txt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/shop_price_etxt" />
    <TextView
        android:text="@string/add_shop_d3_cur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shop_currency_txt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/shop_currency_etxt" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/okbtn"
            android:layout_weight="1" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelbtn"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>