<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/rename_edit"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rename_btn"
        android:layout_weight="1"
        android:text="@string/dialog_select_product_rename"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/change_pic_edit"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/change_pic_btn"
        android:layout_weight="1"
        android:text="@string/dialog_select_product_pic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/change_dec_edit"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/change_dec_btn"
        android:layout_weight="1"
        android:text="@string/dialog_select_product_dec"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/change_price_edit"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/change_price_btn"
        android:layout_weight="1"
        android:text="@string/dialog_select_product_price"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dell_btn"
        android:layout_weight="1"
        android:text="@string/dialog_select_product_dell"
        />

</LinearLayout>