<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="150dp"
    android:id="@+id/cv">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:id="@+id/rv">


        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:id="@+id/data_rl">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/data_back"
                android:id="@+id/data_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_data_big"
                android:text="MAR"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_data_two"
            android:text="5"
            android:textColor="@android:color/white"
            android:layout_below="@+id/order_data_big"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout2"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/data_rl"
            android:layout_marginLeft="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_item_order"
                android:id="@+id/order_numb_title"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XX"
                android:id="@+id/order_numb"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@id/order_numb_title"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/from_shop_title"
                android:text="@string/order_item_fromshop"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@id/order_numb"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XX"
                android:id="@+id/from_shop"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@id/from_shop_title"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_item_attdate"
                android:textColor="@android:color/white"
                android:id="@+id/at_data_title"
                android:layout_below="@id/order_numb_title"
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XX/XX/XX XXPM/AM"
                android:id="@+id/order_data"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@id/at_data_title"
                android:layout_alignBottom="@id/at_data_title"
                android:layout_marginLeft="5dp" />





        </RelativeLayout>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView3"
            android:layout_marginBottom="15dp" />

        <Button
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/order_btn"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="22dp"
            android:id="@+id/oreder_btnss" />
       <RelativeLayout
           android:layout_width="90dp"
           android:layout_height="100dp"
           android:layout_below="@id/oreder_btnss"
           android:layout_alignParentRight="true"
           android:layout_marginRight="5dp"
           android:visibility="invisible"
           android:id="@+id/rvs">


           <Button
               android:layout_width="match_parent"
               android:layout_height="32dp"
               android:background="@drawable/check_stat_btn"
               android:id="@+id/check_btn"

               />

           <Button
               android:layout_width="match_parent"
               android:layout_height="32dp"
               android:background="@drawable/cancel_order_btn"
               android:id="@+id/cancel_btn"
               android:layout_below="@+id/check_btn"
                />
       </RelativeLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>